--- a/src/App.sass
+++ b/src/App.sass
@@ -1,13 +1,29 @@
-*
-  background-color: #282c34
+html
+  background-color: #3A3A3A
+  // background-color: #282c34
+
+$react-blue: #61DAFB
 
 .App 
-  text-align: center
-  background-color: #282c34
+  // text-align: center
+  
 svg
+  position: absolute
+  left: 0
+  top: 0
+  z-index: 1
   box-shadow: black 
   border: white
+  width: 100%
+  height: 100vh
 
+.stats
+  // width: 100px
+  display: inline-block
+  color: white
+  z-index: 2
+  left: 0
+  bottom: 0
 
 .fixed 
   background: #61dafb
