--- a/src/App.sass
+++ b/src/App.sass
@@ -16,6 +16,7 @@ svg
   border: white
   width: 100%
   height: 100vh
+  overflow: visible !important
 
 .stats
   // width: 100px
@@ -29,6 +30,10 @@ svg
   background: #61dafb
 .moving
   background: #5C0
+.react-logo
+  z-index: 1000
+
+
 
 
 
