--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,30 @@
+
+$bg: #1D1C23
+$bgm: #062659
+$bgd: #041A3E
+$main: #EEE
+$purplish: #DB8EDA
+$bgl: #073175
+$bluew: #5E85C3
+$pink: #DD8EDA
+$blue: #42A3F9
+$marron: #3A3A3A
+
+$grad:  linear-gradient(225deg, $pink -11%, $blue 100%)
+$gradl:  linear-gradient(225deg, $pink -30%, $blue 100%)
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
 html
-  background-color: #3A3A3A
+  background-color: $bg
+  // background-color: $marron
   // background-color: #282c34
 
 $react-blue: #61DAFB
@@ -33,7 +58,9 @@ svg
 .react-logo
   z-index: 1000
 
-
+// #ara
+//   direction: rtl
+// 	unicode-bidi: bidi-override
 
 
 
