--- a/src/App.sass
+++ b/src/App.sass
@@ -9,6 +9,7 @@ $bluew: #5E85C3
 $pink: #DD8EDA
 $blue: #42A3F9
 $marron: #3A3A3A
+$react-blue: #61DAFB
 
 $grad:  linear-gradient(225deg, $pink -11%, $blue 100%)
 $gradl:  linear-gradient(225deg, $pink -30%, $blue 100%)
@@ -27,7 +28,7 @@ html
   // background-color: $marron
   // background-color: #282c34
 
-$react-blue: #61DAFB
+
 
 .App 
   // text-align: center
@@ -63,6 +64,16 @@ svg
 // 	unicode-bidi: bidi-override
 
 
+
+	
+.contact
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: flex-end
+  // position: fixed
+  // bottom: 9px
+  color: white
 
 
 
